--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "node": ">=12"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
