--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^1.1.5",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "^1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,7 +26,7 @@
     ]
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
   "browserslist": {
     "production": [
